feat(auth): add Keycloak integration, JWT security, and update unit tests